Chapter 07/7.2.3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
    version: green  # Switch this to blue for rollback
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
